--- a/notebooks/02. Busca Médico/00. setup.dbquery.ipynb
+++ b/notebooks/02. Busca Médico/00. setup.dbquery.ipynb
@@ -64,7 +64,7 @@
     "--###################################################################################################\n",
     "TRUNCATE TABLE pacientes;\n",
     "COPY INTO pacientes\n",
-    "FROM '/Volumes/workshop_databricks_jsf/agents/vol_agent/pacientes.csv'\n",
+    "FROM '/Volumes/<SEU_CATALOGO_AQUI>/agents/vol_agent/pacientes.csv'\n",
     "FILEFORMAT = CSV\n",
     "FORMAT_OPTIONS ('header' = 'true')\n",
     "COPY_OPTIONS (\n",
@@ -77,7 +77,7 @@
     "TRUNCATE TABLE medicos;\n",
     "INSERT INTO medicos\n",
     "SELECT nome_medico,endereco,cidade,estado,pais,cep,latitude,longitude, especialidade, from_json(planos_aceitos,'ARRAY<STRING>') planos_aceitos, bairro FROM read_files(\n",
-    "  '/Volumes/workshop_databricks_jsf/agents/vol_agent/medicos.csv',\n",
+    "  '/Volumes/<SEU_CATALOGO_AQUI>/agents/vol_agent/medicos.csv',\n",
     "  format => 'csv',\n",
     "  quote => '\"',\n",
     "  escape => '\"',\n",
