--- a/notebooks/01. Busca Médico/00. setup.dbquery.ipynb
+++ b/notebooks/01. Busca Médico/00. setup.dbquery.ipynb
@@ -5,7 +5,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 10485760,
+      "rowLimit": 1000
+     },
      "inputWidgets": {},
      "nuid": "8c58891e-45bc-4b0e-9ac4-e87effa7d48f",
      "showTitle": false,
@@ -58,38 +61,7 @@
     "  especialidade STRING,\n",
     "  planos_aceitos ARRAY<STRING>,\n",
     "  bairro STRING);\n",
-    "  \n",
-    "--###################################################################################################\n",
-    "-- PREPARANDO A TABELA PACIENTES USANDO COPY INTO COM FORCE=TRUE, PARA VIABILIZAR O REPROCESSAMENTO #\n",
-    "--###################################################################################################\n",
-    "TRUNCATE TABLE pacientes;\n",
-    "COPY INTO pacientes\n",
-    "FROM '/Volumes/<SEU_CATALOGO_AQUI>/agents/vol_agent/pacientes.csv'\n",
-    "FILEFORMAT = CSV\n",
-    "FORMAT_OPTIONS ('header' = 'true')\n",
-    "COPY_OPTIONS (\n",
-    " 'force' = 'true'\n",
-    ");\n",
-    "\n",
-    "--############################################################\n",
-    "-- PREPARANDO DADOS DA TABELA MEDICOS, UTILIZANDO READ_FILES #\n",
-    "--############################################################\n",
-    "TRUNCATE TABLE medicos;\n",
-    "INSERT INTO medicos\n",
-    "SELECT nome_medico,endereco,cidade,estado,pais,cep,latitude,longitude, especialidade, from_json(planos_aceitos,'ARRAY<STRING>') planos_aceitos, bairro FROM read_files(\n",
-    "  '/Volumes/<SEU_CATALOGO_AQUI>/agents/vol_agent/medicos.csv',\n",
-    "  format => 'csv',\n",
-    "  quote => '\"',\n",
-    "  escape => '\"',\n",
-    "  header => true\n",
-    ");\n",
-    "\n",
-    "--######################################################\n",
-    "-- VERIFICANDO SE AMBAS TABELAS POSSUEM 1000 REGISTROS #\n",
-    "--######################################################\n",
-    "SELECT 'A tabela tabela médicos tem: '|| string(count(1))|| ' registros' resultado from medicos\n",
-    "UNION ALL\n",
-    "SELECT 'A tabela pacientes tem: '|| string(count(1) || ' registros') from pacientes"
+    "  \n"
    ]
   }
  ],
@@ -111,7 +83,7 @@
    "notebookName": "00. setup.dbquery.ipynb",
    "widgets": {
     "iniciais": {
-     "currentValue": "",
+     "currentValue": "jsf",
      "nuid": "7e37bbf5-608d-495d-8df1-e3b3e8de978c",
      "typedWidgetInfo": {
       "autoCreated": false,
