--- a/notebooks/01. Busca Médico/02. Create Functions.ipynb
+++ b/notebooks/01. Busca Médico/02. Create Functions.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "23a196e7-3b6f-4a43-b709-cf0d6ccaaa6b",
      "showTitle": false,
@@ -24,7 +27,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "652fe02a-b4ba-4bff-bf12-113b0c151945",
      "showTitle": false,
@@ -110,7 +116,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "01d94e29-962d-423c-aaee-bddeff8a810e",
      "showTitle": false,
@@ -126,7 +135,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "2c85b6d8-9270-4f71-9be9-2148244a32be",
      "showTitle": false,
@@ -183,7 +195,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "c7a3b74e-4e60-42c4-abe5-dcb9212914db",
      "showTitle": false,
@@ -200,7 +215,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "76862e4a-3f40-4110-9179-826c57cc01af",
      "showTitle": false,
@@ -217,7 +235,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "34467060-717f-46d3-919d-be0c84357654",
      "showTitle": false,
@@ -310,7 +331,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "b3b7642f-02a7-44e0-a55a-b01651519846",
      "showTitle": false,
@@ -336,7 +360,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "36977b52-db4b-432f-bc72-054ce4fa0316",
      "showTitle": false,
@@ -353,7 +380,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "cbc09e23-440b-465a-a087-be467e2d3c47",
      "showTitle": false,
@@ -418,7 +448,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "cc1e1c11-411f-40d4-97a9-e5adefaa097f",
      "showTitle": false,
@@ -446,11 +479,11 @@
    "notebookName": "02. Create Functions",
    "widgets": {
     "CATALOG": {
-     "currentValue": "workshop_databricks_vfm",
+     "currentValue": "workshop_databricks_jsf",
      "nuid": "4e03c578-c7ad-4a38-9a3d-d10f8a9f3cba",
      "typedWidgetInfo": {
       "autoCreated": false,
-      "defaultValue": "workshop_databricks_vfm",
+      "defaultValue": "workshop_databricks_jsf",
       "label": null,
       "name": "CATALOG",
       "options": {
@@ -461,7 +494,7 @@
      },
      "widgetInfo": {
       "widgetType": "text",
-      "defaultValue": "workshop_databricks_vfm",
+      "defaultValue": "workshop_databricks_jsf",
       "label": null,
       "name": "CATALOG",
       "options": {
@@ -498,7 +531,7 @@
      }
     },
     "iniciais": {
-     "currentValue": "vfm",
+     "currentValue": "jsf",
      "nuid": "da0a83a8-3309-47ed-9755-00e7e4e89e14",
      "typedWidgetInfo": {
       "autoCreated": false,
@@ -524,11 +557,11 @@
      }
     },
     "medicos_table": {
-     "currentValue": "workshop_databricks_vfm.agents.medicos",
+     "currentValue": "workshop_databricks_jsf.agents.medicos",
      "nuid": "89c742a7-b20b-4625-8fb2-f96a94e96d1f",
      "typedWidgetInfo": {
       "autoCreated": false,
-      "defaultValue": "workshop_databricks_vfm.agents.medicos",
+      "defaultValue": "workshop_databricks_jsf.agents.medicos",
       "label": null,
       "name": "medicos_table",
       "options": {
@@ -539,7 +572,7 @@
      },
      "widgetInfo": {
       "widgetType": "text",
-      "defaultValue": "workshop_databricks_vfm.agents.medicos",
+      "defaultValue": "workshop_databricks_jsf.agents.medicos",
       "label": null,
       "name": "medicos_table",
       "options": {
@@ -550,11 +583,11 @@
      }
     },
     "pacientes_table": {
-     "currentValue": "workshop_databricks_vfm.agents.pacientes",
+     "currentValue": "workshop_databricks_jsf.agents.pacientes",
      "nuid": "18a284c2-eae5-48e8-b453-cd880e2d6263",
      "typedWidgetInfo": {
       "autoCreated": false,
-      "defaultValue": "workshop_databricks_vfm.agents.pacientes",
+      "defaultValue": "workshop_databricks_jsf.agents.pacientes",
       "label": null,
       "name": "pacientes_table",
       "options": {
@@ -565,7 +598,7 @@
      },
      "widgetInfo": {
       "widgetType": "text",
-      "defaultValue": "workshop_databricks_vfm.agents.pacientes",
+      "defaultValue": "workshop_databricks_jsf.agents.pacientes",
       "label": null,
       "name": "pacientes_table",
       "options": {
