--- a/notebooks/02. IRPF Agent/01. IR PDF Parser.ipynb
+++ b/notebooks/02. IRPF Agent/01. IR PDF Parser.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "4bdf801a-fa4b-4513-9cf9-342db6827075",
      "showTitle": false,
@@ -21,11 +24,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "1590f2d2-38ff-47bb-8aa1-8c355d6e50c3",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "## Objetivo do exercício\n",
+    "\n",
+    "Este notebook tem como objetivo principal a criação de uma base de conhecimento a partir de documentos PDF. O processo inclui a instalação das bibliotecas necessárias, a extração e estruturação das informações contidas nesses documentos. A seguir, estão as etapas detalhadas:\n",
+    "\n",
+    "1. **Upload do PDF no Volume**: Faça o upload do arquivo PDF e armazene no volume de armazenamento do Databricks.\n",
+    "2. **Instalação de Bibliotecas**: Instala as bibliotecas necessárias para manipulação e extração de dados de arquivos PDF.\n",
+    "3. **Criação da Base de Conhecimento**: Extrai as informações dos PDFs e estrutura os dados em uma base de conhecimento utilizável para análises posteriores."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "e02bf614-7ed4-4f9d-9385-af7835114aea",
      "showTitle": false,
@@ -35,7 +66,7 @@
    },
    "outputs": [],
    "source": [
-    "dbutils.widgets.text(\"CATALOG\", \"databricks_workshop_jsf\")\n",
+    "dbutils.widgets.text(\"CATALOG\", \"databricks_workshop_\")\n",
     "dbutils.widgets.text(\"SCHEMA\", \"agents\")"
    ]
   },
@@ -44,7 +75,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "3797259a-1f46-4f97-b560-6e1f42c4909d",
      "showTitle": false,
@@ -63,7 +97,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "a4cd6fbc-387f-40eb-81fb-4dcf62f99c9e",
      "showTitle": false,
@@ -82,7 +119,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "6b210c4d-f7f9-4aaa-9e61-2aace9c3ea03",
      "showTitle": false,
@@ -100,7 +140,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "e4808f5d-29c9-4fb1-809d-f4e5ecfae837",
      "showTitle": false,
@@ -125,7 +168,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "6533c089-342a-47ac-921f-6c63fcdcf371",
      "showTitle": true,
@@ -143,7 +189,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "be820b93-b828-4650-8801-5fc785f2ae7c",
      "showTitle": false,
@@ -162,7 +211,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "63b50aa2-974b-49aa-b986-b3c6e807a031",
      "showTitle": false,
@@ -180,7 +232,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "7cec1a8a-a04e-448d-9da8-b31cd0713303",
      "showTitle": false,
@@ -209,7 +264,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "04ed48d3-55e4-4d20-a369-3c45c34900a1",
      "showTitle": false,
@@ -219,7 +277,8 @@
    },
    "outputs": [],
    "source": [
-    "from pyspark.sql.functions import monotonically_increasing_id, to_json, col\n",
+    "from pyspark.sql.functions import monotonically_increasing_id, to_json, col \n",
+    "from pyspark.sql.types import  StructType, StructField, StringType, ArrayType\n",
     "\n",
     "schema = StructType([\n",
     "    StructField('chunk', ArrayType(\n",
@@ -239,7 +298,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "05d3fb1f-f0e2-42b1-b6fc-0c0a9e192652",
      "showTitle": false,
@@ -257,7 +319,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "bc1e96c3-edcd-4656-815d-60f2059659ef",
      "showTitle": false,
@@ -275,7 +340,11 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "47754638-e896-4500-965d-aa906ecf8196",
      "showTitle": false,
@@ -293,7 +362,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "508df5d6-836e-4fca-a5e6-6a185c4b7381",
      "showTitle": false,
@@ -310,7 +382,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "2355194e-4247-49f0-803a-83ec3bef294a",
      "showTitle": false,
@@ -332,10 +407,69 @@
    "inputWidgetPreferences": null,
    "language": "python",
    "notebookMetadata": {
+    "mostRecentlyExecutedCommandWithImplicitDF": {
+     "commandId": 2805190872777049,
+     "dataframes": [
+      "_sqldf"
+     ]
+    },
     "pythonIndentUnit": 2
    },
    "notebookName": "01. IR PDF Parser",
-   "widgets": {}
+   "widgets": {
+    "CATALOG": {
+     "currentValue": "workshop_databricks_jsf",
+     "nuid": "2e18a661-b00d-4137-9dcc-163aa822bc3e",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "databricks_workshop_",
+      "label": null,
+      "name": "CATALOG",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "databricks_workshop_",
+      "label": null,
+      "name": "CATALOG",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": null,
+       "validationRegex": null
+      }
+     }
+    },
+    "SCHEMA": {
+     "currentValue": "agents",
+     "nuid": "0244cb9c-23f3-4919-bf50-ddd1ca133a4c",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "agents",
+      "label": null,
+      "name": "SCHEMA",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "agents",
+      "label": null,
+      "name": "SCHEMA",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": null,
+       "validationRegex": null
+      }
+     }
+    }
+   }
   },
   "language_info": {
    "name": "python"
