--- a/notebooks/02. IRPF Agent/02. Rag Chatbot IR - VS.ipynb
+++ b/notebooks/02. IRPF Agent/02. Rag Chatbot IR - VS.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "2f0ab7a6-b9fa-4625-bfe7-f636104804f4",
      "showTitle": false,
@@ -24,7 +27,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "f901f7c8-cd20-4391-b7c4-08ac3e33573c",
      "showTitle": false,
@@ -46,7 +52,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "4bd7cc50-a19f-4dc5-a71b-70d155ed4f97",
      "showTitle": false,
@@ -63,7 +72,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "0e6aa505-00d4-49ab-8a74-bb93c7ff883c",
      "showTitle": false,
@@ -81,7 +93,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "344afb7e-c49c-4d84-a0c6-97efa12f2d5b",
      "showTitle": false,
@@ -98,7 +113,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "83b0b37e-fc07-4eba-935f-8b3262e2d915",
      "showTitle": false,
@@ -116,7 +134,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "e5443f73-eaed-47de-bac4-722715e25c3a",
      "showTitle": false,
@@ -137,7 +158,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "20d54356-93cf-4bce-ab3b-f0841178ae2c",
      "showTitle": false,
@@ -158,7 +182,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "c5d8efc9-cc2b-4b38-9822-ded1f4cf65a8",
      "showTitle": false,
@@ -175,7 +202,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "25e55b3d-6b5a-4733-9a9f-fbe97a6bb770",
      "showTitle": false,
@@ -194,7 +224,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "a7eb0ab6-9a31-4bc0-a777-83e8c313eff8",
      "showTitle": false,
@@ -222,7 +255,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "c55f3d19-8ae4-4f22-913b-ab69e074e8ca",
      "showTitle": false,
@@ -239,7 +275,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "568de26d-7356-4f74-b587-7c7b6af6b3d6",
      "showTitle": false,
@@ -255,7 +294,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "b69c29a3-5444-4890-b5c1-91e6f6084615",
      "showTitle": false,
@@ -272,7 +314,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "aed62006-6182-4bc3-96ea-992597ea3cf2",
      "showTitle": false,
@@ -283,7 +328,7 @@
    "outputs": [],
    "source": [
     "from databricks.vector_search.client import VectorSearchClient\n",
-    "vsc = VectorSearchClient()\n",
+    "vsc = VectorSearchClient(disable_notice=True)\n",
     "\n",
     "if not endpoint_exists(vsc, vs_endpoint):\n",
     "    vsc.create_endpoint(name=vs_endpoint, endpoint_type=\"STANDARD\")\n",
@@ -297,7 +342,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "daf82a21-d862-45e8-85c8-839f22cadc00",
      "showTitle": false,
@@ -322,7 +370,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "6a16a677-762a-4529-9080-3442f21fb335",
      "showTitle": false,
@@ -340,7 +391,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "f04aa3d2-2dc0-435a-bade-60801f140a63",
      "showTitle": false,
@@ -379,7 +433,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "a4905b6e-8207-4fde-a9d6-549c2da5c4a0",
      "showTitle": false,
@@ -396,7 +453,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "ec244c61-4f59-42ad-ac9b-c3c8a7400846",
      "showTitle": false,
@@ -413,7 +473,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "a482747f-7de1-4eaa-b112-f1123297f64c",
      "showTitle": false,
@@ -454,7 +517,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "6333828a-59fe-4b8d-be61-d5f7fc792b86",
      "showTitle": false,
@@ -473,7 +539,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "d85c7a5d-e6b2-4cc3-ae5a-b1399a9f5a4a",
      "showTitle": false,
@@ -509,7 +578,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "08ecf538-66be-4617-b608-bafde4edd3e8",
      "showTitle": false,
@@ -526,7 +598,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "7f3d14c6-60ec-4852-b513-f323a9d8b573",
      "showTitle": false,
@@ -549,7 +624,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "c728ec90-04c5-4444-ab0f-7b8bb346c591",
      "showTitle": false,
@@ -572,7 +650,112 @@
     "pythonIndentUnit": 2
    },
    "notebookName": "02. Rag Chatbot IR - VS",
-   "widgets": {}
+   "widgets": {
+    "catalog": {
+     "currentValue": "workshop_databricks_jsf",
+     "nuid": "523a14e9-9930-44fc-b404-cac2aa1ff573",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "workshop_databricks_jsf",
+      "label": "Catálogo",
+      "name": "catalog",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "workshop_databricks_jsf",
+      "label": "Catálogo",
+      "name": "catalog",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": null,
+       "validationRegex": null
+      }
+     }
+    },
+    "schema": {
+     "currentValue": "agents",
+     "nuid": "f95a16ef-4573-49ae-bd8d-8896bae16790",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "juliandro_figueiro_my",
+      "label": "Schema",
+      "name": "schema",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "juliandro_figueiro_my",
+      "label": "Schema",
+      "name": "schema",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": null,
+       "validationRegex": null
+      }
+     }
+    },
+    "volume_path": {
+     "currentValue": "/Volumes/workshop_databricks_jsf/juliandro_figueiro_my/vol_ir",
+     "nuid": "f2ad33d9-db2f-4dfe-966a-019b6ed552f1",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "/Volumes/workshop_databricks_jsf/juliandro_figueiro_my/vol_ir",
+      "label": "Caminho para o Volume",
+      "name": "volume_path",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "/Volumes/workshop_databricks_jsf/juliandro_figueiro_my/vol_ir",
+      "label": "Caminho para o Volume",
+      "name": "volume_path",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": null,
+       "validationRegex": null
+      }
+     }
+    },
+    "vs_endpoint": {
+     "currentValue": "vs_workshop_23_07",
+     "nuid": "1f886b1b-af1c-4a6d-9c5a-e37b06983646",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "vs_workshop_23_07",
+      "label": "Nome do endpoint de Vector Search",
+      "name": "vs_endpoint",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "vs_workshop_23_07",
+      "label": "Nome do endpoint de Vector Search",
+      "name": "vs_endpoint",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": null,
+       "validationRegex": null
+      }
+     }
+    }
+   }
   },
   "language_info": {
    "name": "python"
